# ChangeLog for g-cpan
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Rev: $

  28 Apr 2007; Michael Cummings <mcummings@gentoo.org> bin/g-cpan,
  +lib/Gentoo/Ebuild.pm, lib/Gentoo/Portage.pm:
  Sanity save. I've started to break out ebuild specific functions from portage
  specific functions so that in the long term we can generate ebuilds with one
  set of modules, and worry about the package manager of choice with another.

  28 Apr 2007; Michael Cummings <mcummings@gentoo.org> Makefile.PL,
  bin/g-cpan, lib/Gentoo/UI/Console.pm:
  Updating to reflect findings from Perl::Critic; in the process identified and
  corrected a minor bug with the cleanup routine when permissions weren't
  sufficient.

  05 Apr 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Quick fix for search results of 0

  01 Apr 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Snapshot as I let loose rc6

  31 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixes for bug 168647, 161732 - added simple lookup table for those few CPAN
  modules that don't match ebuild names

  27 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Just cleaning up from the CPAN.pm fixes

  26 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  rc5; contains fix for different versions of CPAN.pm being loaded, thanks to
  Jmax- for noticing this. Will clean up and post to gentoo shortly.

*g-cpan-0.15_rc5 (26 Mar 2007)

  26 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Posting rc4 to help users test out bugs, beginning rc5

  24 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed spinner annoyanc (newlines); added check to make sure yaml file is
  valid before attempting to parse it for deps; bug 170137 addressed

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed potential bug with checking to see if the module was installed with